[package]
name = "narwhal-consensus"
version = "0.1.0"
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features= ["codec"] }

config = { git = "https://github.com/ipapandinas/narwhal/" }
store = { git = "https://github.com/ipapandinas/narwhal/" }
crypto = { git = "https://github.com/ipapandinas/narwhal/" }
primary = { git = "https://github.com/ipapandinas/narwhal/" }
worker = { git = "https://github.com/ipapandinas/narwhal/" }
consensus = { git = "https://github.com/ipapandinas/narwhal/" }
rocksdb = "0.21.0"
log = "0.4.22"
hex = "0.4.3"
bincode = "1.3.3"
