[package]
name = "narwhal-consensus"
version = "0.1.0"
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features= ["codec"] }
rocksdb = "0.21.0"
hex = "0.4.3"
bincode = "1.3.3"
polkadot-sdk = { workspace = true, features = ["experimental", "node"] }
log.workspace = true
futures.workspace = true
serde_json.workspace = true

# Narwhal
config = { git = "https://github.com/ipapandinas/narwhal/" }
store = { git = "https://github.com/ipapandinas/narwhal/" }
crypto = { git = "https://github.com/ipapandinas/narwhal/" }
primary = { git = "https://github.com/ipapandinas/narwhal/" }
worker = { git = "https://github.com/ipapandinas/narwhal/" }
consensus = { git = "https://github.com/ipapandinas/narwhal/" }
